# swe

./: .gitignore  README.md  plot.py  pyproject.toml
swe/: ask.py  cli.py  context.py  graph.py  implement.py  paths.py  plan_editor.py  scripts.py
tests/: test_swe.py
