[tool.poetry]
name = "swe"
version = "0.1.0"
description = "A coding agent to manage context and answer questions using LLMs"
authors = ["Ludovico Papavassiliou <ludo.progamer@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.3.14"
langchain-openai = "^0.3.0"
openai = "^1.59.8"

[tool.poetry.scripts]
swe = "swe.cli:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
