[tool.poetry]
name = "swe"
version = "0.4.0"
description = "A coding agent to manage context and answer questions using LLMs"
authors = ["Ludovico Papavassiliou <ludo.progamer@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.3.14"
langchain-openai = "^0.3.0"
openai = "^1.59.8"
pathspec = "^0.12.1"

[tool.poetry.scripts]
swe = "swe.cli:main"
install-swe = "swe.scripts:install_command"
update-swe = "swe.scripts:update_command"
uninstall-swe = "swe.scripts:uninstall_command"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
